--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h1 {
     font-size: 1em;
     letter-spacing: 0.5px;
 }
-.rakuten { background-color: #CC3399; }
+.rakuten { background-color: #cc3399; }
 .instagram { background-color: #f7a1c4; }
 .tiktok { background-color: #d9d9d9; }
 .youtube { background-color: #fbb1a8; }
