--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ h1 {
 .instagram { background-color: #f7a1c4; }
 .tiktok { background-color: #d9d9d9; }
 .youtube { background-color: #fbb1a8; }
+.rakuten { background-color: #cc3399; }
 .social-links a:hover {
     opacity: 0.85;
 }
