--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Georgia", serif;
-  background-color: #f9f6f1;
+  background-color: #fff;
   color: #555;
   text-align: center;
   padding: 50px;
